# algokit-utils-ts

./: .env.template  .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmrc  .nsprc  .prettierignore  .prettierrc  MIGRATION-NOTES.md  MIRATION-NOTES.md  README.md  [DRAFT]-migration.md  algorandfoundation-algokit-utils-debug-0.1.0.tgz  commitlint.config.js  eslint.config.mjs  example.env  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rolldown.config.ts  rolldown.ts  rollup-multi-plugin.ts  rollup.config.ts  tsconfig.base.json  tsconfig.build.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.examples.json  tsconfig.json  tsconfig.typecheck.json  typedoc.examples.json  typedoc.html.json  typedoc.json  typedoc.markdown.json  vitest.config.ts
oas-generator/: pyproject.toml
oas-generator/src/oas_generator/: __init__.py  cli.py  constants.py  loader.py
oas-generator/src/oas_generator/generator/: __init__.py  codec_processor.py  filters.py  models.py  template_engine.py
oas-generator/src/oas_generator/parser/: __init__.py  oas_parser.py
oas-generator/src/oas_generator/templates/: client.ts.j2
oas-generator/src/oas_generator/templates/apis/: index.ts.j2  service.ts.j2
oas-generator/src/oas_generator/templates/base/src/: index.ts.j2
oas-generator/src/oas_generator/templates/models/: index.ts.j2  model-meta.ts.j2  model.ts.j2
oas-generator/src/oas_generator/templates/models/block/: application-eval-delta.ts.j2  block-account-state-delta.ts.j2  block-app-eval-delta.ts.j2  (+7 more)
oas-generator/src/oas_generator/utils/: __init__.py  file_utils.py
(+5110 files in other folders)
